[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo_arm"
version = "0.1.0"
description = "Inverted articulated robot arm — drivers, control, and ROS 2 integration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "jdt623" }]

# Runtime deps are tracked in requirements.txt during Phase 1 for simplicity.
# Once stable, mirror them here.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

# ------------------------------------------------------------
# Ruff (linter + formatter)
# ------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

# ------------------------------------------------------------
# pytest
# ------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=robo_arm --cov-report=term-missing"
markers = [
    "hardware: tests that require physical hardware connected to the Pi",
    "slow: tests that take more than a few seconds",
]
